--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,19 +1,33 @@
 <header class="header">
   <div class="container">
     <nav class="nav">
+
       <a class="nav-logo" href="./index.html" aria-label="Site logo">
-        <svg class="nav-logo-icon" width="100" height="30">
-          <use href="{=$icon-path}"></use>
-        </svg>
-      </a>
+        <svg class="nav-logo-icon" width="28" height="28">
+          <use href="../img/sprite.svg#icon-ukraine"></use>
+        </svg>LearnLingo </a>
+
+
       <ul class="nav-list">
         <li class="nav-item">
-          <a class="nav-link {=$highlight-act}" href="./page-2.html">Page 2</a>
+          <a class="nav-link" href="./index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link {=$highlight-curr}" href="./page-3.html">Page 3</a>
+          <a class="nav-link " href="./teachers.html">Teachers</a>
         </li>
       </ul>
     </nav>
+    <div>
+
+
+      <ul>
+        <li><a class="logIn">
+            <svg width="20" height="20">
+              <use href="../img/sprite.svg#icon-log-in"></use>
+            </svg>Log in</a></li>
+        <li><a>Registration</a></li>
+      </ul>
+    </div>
   </div>
+
 </header>
