--- a/src/css/container.css
+++ b/src/css/container.css
@@ -5,15 +5,36 @@
   margin: 0 auto;
   padding: 0 16px;
 }
-/* Styles for Tablet devices */
-@media only screen and (min-width: 768px) {
+
+/* Mobile */
+@media screen and (min-width: 320px) and (max-width: 374px) {
   .container {
-    max-width: 768px;
+    width: 100%;
   }
 }
-/* Styles for Desktop devices */
-@media only screen and (min-width: 1200px) {
+
+
+/*  Tablet */
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    padding: 0 32px;
+    /* ??? */
+  }
+}
+
+/* Desktop  */
+@media screen and (min-width: 1200px) {
   .container {
     max-width: 1200px;
+    padding: 0 50px;
+    /* ??? */
+  }
+}
+
+/* Desktop 2 */
+@media screen and (min-width: 1440px) {
+  .container {
+    max-width: 1440px;
   }
 }
