--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,15 +1,12 @@
-<footer class="footer">
-  <div class="container">
-    <p class="footer-desc">
-      Made with ✨ by
-      <a
-        class="footer-link"
-        href="https://goit.global/ua/"
-        target="_blank"
-        rel="noopener noreferrer"
-      >
-        GoIT team
-      </a>
-    </p>
+<footer className={css.footer}>
+  <div className={css.content}>
+    <div className={css.wrap}>
+      <p>
+        Created by
+        <a href="https://github.com/gapeevbachmut" target="_blank">Hapieiev Andrii</a>
+
+      </p>
+    </div>
+    <p>© 2025 - {new Date().getFullYear()} All rights reserved.</p>
   </div>
 </footer>
