done header and main page

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,12 +1,8 @@
-<footer className={css.footer}>
-  <div className={css.content}>
-    <div className={css.wrap}>
-      <p>
-        Created by
-        <a href="https://github.com/gapeevbachmut" target="_blank">Hapieiev Andrii</a>
-
-      </p>
-    </div>
+<footer class="footer">
+  <div class="footer-content">
+    <p class="footer-text"> Created by
+      <a href="https://github.com/gapeevbachmut" target="_blank">Hapieiev Andrii</a>
+    </p>
     <p>© 2025 - {new Date().getFullYear()} All rights reserved.</p>
   </div>
 </footer>
