--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,3 +1,9 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 :root {
   --font-family: "Roboto", sans-serif;
   font-size: 16px;
@@ -14,6 +20,12 @@ body {
   min-width: 100vw;
   min-height: 100vh;
   margin: 0;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 125%;
+  color: #121417;
+  /* border: solid 2px blue; */
 }
 
 main {
