--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,21 +1,17 @@
 .footer {
-  padding: 20px 0;
+  display: flex;
+  justify-content: center;
 }
-.footer-desc {
+
+.footer-content {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 129%;
+  letter-spacing: -0.02em;
+  color: rgba(18, 20, 23, 0.7);
+}
+
+.footer-text {
   text-align: center;
-}
-.footer-link {
-  position: relative;
-}
-.footer-link::before {
-  content: '';
-  position: absolute;
-  bottom: 6%;
-  left: 50%;
-  transform: translateX(-50%) skewX(-12deg);
-  z-index: -1;
-  width: 110%;
-  height: 24%;
-  background-color: #41d1ff;
-  transition: 200ms ease;
 }
