--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,51 +1,128 @@
 .header {
-  padding: 20px 0;
+  margin: 20px 0;
+}
+
+.container-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding: 0;
+  height: 48px;
 }
 
 .nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  width: 100%;
 }
 
-.nav-logo,
-.logIn {
+.nav-logo {
   display: flex;
   align-items: center;
+  gap: 6px;
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 120%;
+  letter-spacing: -0.02em;
+  color: #121417;
+  cursor: pointer;
 }
 
 .nav-list {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
-  gap: 40px;
+  gap: 8px;
+  font-size: 12px;
+
 }
 
 .nav-link {
-  position: relative;
-  display: block;
+  color: #121417;
+}
+
+.auth {
+  width: 80%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.auth-list {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
+
+.logIn {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  font-family: var(--font-family);
   font-weight: 500;
-  letter-spacing: 0.02em;
-  transition: 200ms ease-in;
+  font-size: 12px;
+  line-height: 125%;
+  color: #121417;
 }
 
-.nav-link:hover,
-.nav-link:focus {
-  color: #747bff;
+.register {
+  border-radius: 8px;
+  padding: 6px 24px;
+  background-color: #121417;
+  font-weight: 500;
+  font-size: 12px;
+  color: #fff;
 }
 
-.nav-link::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%) translateY(100%);
-  width: 110%;
-  height: 4px;
-  border-radius: 4px;
-  transform-origin: center;
-  animation: stretch 400ms cubic-bezier(0.68, -0.55, 0.27, 1.55) 200ms both;
+/* --------------------------------------------- */
+@media screen and (min-width: 768px) {
+  .container-header {
+    width: 644px;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .nav {
+    justify-content: space-between;
+  }
+
+  .nav-logo {
+    font-size: 20px;
+    gap: 8px;
+  }
+
+  .nav-list {
+    gap: 28px;
+    font-size: 16px;
+  }
+
+  .auth-list {
+    gap: 16px;
+  }
+
+  .logIn {
+    gap: 8px;
+    font-weight: 700;
+    font-size: 16px;
+  }
+
+  .register {
+    border-radius: 12px;
+    padding: 14px 39px;
+    font-weight: 700;
+    font-size: 16px;
+  }
 }
 
-.nav-link.active::after {
-  background: #747bff;
+
+@media screen and (min-width: 1200px) {
+  .container-header {
+    width: 944px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .container-header {
+    width: 1184px;
+  }
 }
