--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -21,10 +21,12 @@ ul {
 a {
   color: currentColor;
   text-decoration: none;
+  cursor: pointer;
 }
 
 button {
   cursor: pointer;
+  line-height: 0;
 }
 
 img {
