--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,6 +13,6 @@
 /* Sections style */
 @import url('./header.css');
 /* @import url('./vite-promo.css'); */
-/* @import url('./badges.css'); */
+@import url('./main-content.css');
 @import url('./back-link.css');
 @import url('./footer.css');
