--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,12 +1,11 @@
 <header class="header">
-  <div class="container">
+  <div class="container container-header">
     <nav class="nav">
 
       <a class="nav-logo" href="./index.html" aria-label="Site logo">
         <svg class="nav-logo-icon" width="28" height="28">
           <use href="../img/sprite.svg#icon-ukraine"></use>
         </svg>LearnLingo </a>
-
 
       <ul class="nav-list">
         <li class="nav-item">
@@ -16,16 +15,15 @@
           <a class="nav-link " href="./teachers.html">Teachers</a>
         </li>
       </ul>
+
     </nav>
-    <div>
-
-
-      <ul>
+    <div class="auth">
+      <ul class="auth-list">
         <li><a class="logIn">
             <svg width="20" height="20">
               <use href="../img/sprite.svg#icon-log-in"></use>
             </svg>Log in</a></li>
-        <li><a>Registration</a></li>
+        <li><a class="register">Registration</a></li>
       </ul>
     </div>
   </div>
