fix rout for images

--- a/src/partials/main-content.html
+++ b/src/partials/main-content.html
@@ -13,7 +13,7 @@
       </a>
     </div>
     <div class="main-img-box">
-      <img src="../img/main-content/main-content.png" alt="main-image" width="568" height="530" />
+      <img src="/img/main-content/main-content.png" alt="main-image" width="568" height="530" />
     </div>
 
   </div>
