--- a/src/partials/filters.html
+++ b/src/partials/filters.html
@@ -1,3 +1,27 @@
-<section class="filtes">
-  filters
+<section class="filters">
+
+  <div class="filter">
+    <label class="filter-label" for="filter-language">
+      Languages
+    </label>
+    <select id="filter-language" class="filter-select">
+    </select>
+  </div>
+
+  <div class="filter">
+    <label class="filter-label" for="filter-level">
+      Level of knowledge
+    </label>
+    <select id="filter-level" class="filter-select">
+    </select>
+  </div>
+
+  <div class="filter">
+    <label class="filter-label" for="filter-price">
+      Price
+    </label>
+    <select id="filter-price" class="filter-select">
+    </select>
+  </div>
+
 </section>
