done pagination and markup teachers

--- a/src/css/teachers-list.css
+++ b/src/css/teachers-list.css
@@ -165,13 +165,81 @@
   margin-bottom: 20px;
 }
 
-@media screen and (min-width: 768px) {}
+@media screen and (min-width: 768px) {
+  .teacher-content {
+    padding: 24px;
+  }
 
-@media screen and (min-width: 1200px) {}
+  .teacher-content-top {
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 24px;
+  }
+
+  .teacher-meta {
+    flex-direction: row;
+    gap: 24px;
+    flex-wrap: wrap;
+    width: calc((100% - 8px) / 2);
+  }
+
+  .teacher-meta:last-child {
+    justify-content: end;
+  }
+
+  .teacher-separator {
+    display: block;
+  }
+
+  .teacher-like-btn {
+    margin: 0;
+  }
+
+  .teacher-info {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+  }
+
+  .teacher-levels {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .teacher-card {
+    display: flex;
+    padding: 24px;
+  }
+
+  .teacher-meta {
+    flex-wrap: nowrap;
+    width: 100%;
+    gap: 16px;
+  }
+
+  .teacher-like-btn {
+    margin-left: 64px;
+  }
+
+  .teacher-data {
+    width: 200px;
+  }
+
+  .load-more-btn {
+    margin-top: 64px;
+    margin-bottom: 64px;
+  }
+}
 
 @media screen and (min-width: 1440px) {
   .teachers-list {
     margin-left: 110px;
     margin-right: 110px;
+  }
+
+  .teacher-card {
+    gap: 48px;
   }
 }
