done markup filters

--- a/src/partials/filters.html
+++ b/src/partials/filters.html
@@ -4,7 +4,7 @@
     <label class="filter-label" for="filter-language">
       Languages
     </label>
-    <select id="filter-language" class="filter-select">
+    <select id="filter-language" class="filter-select language">
     </select>
   </div>
 
@@ -12,7 +12,8 @@
     <label class="filter-label" for="filter-level">
       Level of knowledge
     </label>
-    <select id="filter-level" class="filter-select">
+    <select id="filter-level" class="filter-select level">
+
     </select>
   </div>
 
@@ -20,7 +21,7 @@
     <label class="filter-label" for="filter-price">
       Price
     </label>
-    <select id="filter-price" class="filter-select">
+    <select id="filter-price" class="filter-select price">
     </select>
   </div>
 
