--- a/src/css/filters.css
+++ b/src/css/filters.css
@@ -1,8 +1,14 @@
 .filters {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 12px;
   margin-top: 12px;
+}
+
+.filter {
+  display: flex;
+  flex-direction: column;
 }
 
 .filter-label {
@@ -20,4 +26,58 @@
   width: 200px;
   background-color: #fff;
   border: none;
+}
+
+@media screen and (min-width: 768px) {
+  .filters {
+    flex-direction: row;
+    gap: 20px;
+    padding: 16px;
+  }
+
+  .filter {
+    gap: 8px;
+  }
+
+  .filter-select {
+    padding: 8px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .filters {
+    padding: 24px;
+  }
+
+  .filter-select {
+    padding: 12px;
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 111%;
+    color: #121417;
+  }
+
+  .filter-select option {
+    width: 100%;
+  }
+
+  .language {
+    width: 220px;
+  }
+
+  .level {
+    width: 200px;
+  }
+
+  .price {
+    width: 125px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .filters {
+    padding-left: 0;
+    margin-left: 110px;
+  }
 }
