--- a/src/css/header.css
+++ b/src/css/header.css
@@ -7,8 +7,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  gap: 12px;
   padding: 0;
-  height: 48px;
+  height: 68px;
 }
 
 .nav {
@@ -81,6 +82,7 @@
     width: 644px;
     flex-direction: row;
     justify-content: space-between;
+    height: 48px;
   }
 
   .nav {
