fix filter languages

--- a/src/partials/filters.html
+++ b/src/partials/filters.html
@@ -5,7 +5,7 @@
       Languages
     </label>
     <select id="filter-language" class="filter-select language">
-      <option value="">French</option>
+      <option value="">All Languages</option>
     </select>
   </div>
 
