done filter price

--- a/src/partials/filters.html
+++ b/src/partials/filters.html
@@ -14,7 +14,7 @@
       Level of knowledge
     </label>
     <select id="filter-level" class="filter-select level">
-      <option value="">Level</option>
+      <option value="">Levels</option>
     </select>
   </div>
 
@@ -23,7 +23,7 @@
       Price
     </label>
     <select id="filter-price" class="filter-select price">
-      <option value="">Price</option>
+      <option value="">Prices</option>
     </select>
   </div>
 
