--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,4 +16,5 @@
 @import url('./filters.css');
 @import url('./teachers-list.css');
 /* @import url('./back-link.css'); */
+@import url('./test-svg.css');
 @import url('./footer.css');
