--- a/src/partials/teacher-card.html
+++ b/src/partials/teacher-card.html
@@ -4,7 +4,7 @@
     <img src="https://ftp.goit.study/img/avatars/1.jpg" alt="Teacher avatar" class="teacher-avatar-img" width="96"
       height="96" />
     <svg width="12" height="12" class="teacher-avatar-svg">
-      <use href="/img/sprite.svg#icon-group"></use>
+      <use href="/img/sprite-2.svg#icon-group"></use>
     </svg>
   </div>
 
@@ -23,7 +23,7 @@
 
         <p class="teacher-lessons-online">
           <svg width="16" height="16" class="svg-book">
-            <use href="/img/sprite.svg#icon-book-open"></use>
+            <use href="/img/sprite-2.svg#icon-book-open"></use>
           </svg>
           Lessons online
         </p>
@@ -34,7 +34,7 @@
         <span class="teacher-separator">|</span>
         <p class="teacher-rating">
           <svg width="16" height="16" class="svg-star">
-            <use href="/img/sprite.svg#icon-star"></use>
+            <use href="/img/sprite-2.svg#icon-star"></use>
           </svg>
           Rating: <span>4.8</span>
         </p>
@@ -44,7 +44,7 @@
         </p>
         <button class="teacher-like-btn" type="button">
           <svg width="16" height="16" class="svg-heart">
-            <use href="/img/sprite.svg#icon-normal"></use>
+            <use href="/img/sprite-2.svg#icon-normal"></use>
           </svg>
         </button>
       </div>
