--- a/src/partials/teacher-card.html
+++ b/src/partials/teacher-card.html
@@ -1,3 +1,5 @@
+<!-- template    !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+
 <li class="teacher-card">
   <!-- Avatar -->
   <div class="teacher-avatar">
