test for SVG - 4

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,7 +4,7 @@
 
       <a class="nav-logo" href="./index.html" aria-label="Site logo">
         <svg class="nav-logo-icon" width="28" height="28">
-          <use href="/img/sprite-2.svg#icon-ukraine"></use>
+          <use href="/public/img/sprite.svg#icon-ukraine"></use>
         </svg>LearnLingo </a>
 
       <ul class="nav-list">
@@ -21,7 +21,7 @@
       <ul class="auth-list">
         <li><a class="logIn">
             <svg width="20" height="20">
-              <use href="/img/sprite-2.svg#icon-log-in"></use>
+              <use href="/public/img/sprite.svg#icon-log-in"></use>
             </svg>Log in</a></li>
         <li><a class="register">Registration</a></li>
       </ul>
