test for SVG - 7

--- a/src/partials/test-svg.html
+++ b/src/partials/test-svg.html
@@ -5,56 +5,56 @@
       <p>icon-book-open</p>
       <p>
         <svg width="32" height="32" class="book">
-          <use href="/public/img/sprite.svg#icon-book-open"></use>
+          <use href="/img/sprite.svg#icon-book-open"></use>
         </svg>
       </p>
     </li>
     <li>
       <p>icon-log-in</p>
       <p><svg width="32" height="32">
-          <use href="/public/img/sprite.svg#icon-log-in"></use>
+          <use href="/img/sprite.svg#icon-log-in"></use>
         </svg></p>
     </li>
     <li>
       <p>icon-star</p>
       <p><svg width="32" height="32">
-          <use href="/public/img/sprite.svg#icon-star"></use>
+          <use href="/img/sprite.svg#icon-star"></use>
         </svg></p>
     </li>
     <li>
       <p>icon-eye-off</p>
       <p><svg width="32" height="32" class="eye-off">
-          <use href="/public/img/sprite.svg#icon-eye-off"></use>
+          <use href="/img/sprite.svg#icon-eye-off"></use>
         </svg></p>
     </li>
     <li>
       <p>icon-eye</p>
       <p><svg width="32" height="32" class="eye-on">
-          <use href="/public/img/sprite.svg#icon-eye"></use>
+          <use href="/img/sprite.svg#icon-eye"></use>
         </svg></p>
     </li>
     <li>
       <p>icon-ukraine</p>
       <p><svg width="32" height="32">
-          <use href="/public/img/sprite.svg#icon-ukraine"></use>
+          <use href="/img/sprite.svg#icon-ukraine"></use>
         </svg></p>
     </li>
     <li>
       <p>icon-group</p>
       <p><svg width="32" height="32" class="group">
-          <use href="/public/img/sprite.svg#icon-group"></use>
+          <use href="/img/sprite.svg#icon-group"></use>
         </svg></p>
     </li>
     <li>
       <p>icon-normal</p>
       <p><svg width="32" height="32" class="normal">
-          <use href="/public/img/sprite.svg#icon-normal"></use>
+          <use href="/img/sprite.svg#icon-normal"></use>
         </svg></p>
     </li>
     <li>
       <p>icon-hover</p>
       <p><svg width="32" height="32">
-          <use href="/public/img/sprite.svg#icon-hover"></use>
+          <use href="/img/sprite.svg#icon-hover"></use>
         </svg></p>
     </li>
   </ul>
