--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,6 +15,7 @@
 @import url('./main-content.css');
 @import url('./filters.css');
 @import url('./teachers-list.css');
+@import url('./teacher-extra.css');
 /* @import url('./back-link.css'); */
 @import url('./test-svg.css');
 @import url('./footer.css');
