--- a/src/css/base.css
+++ b/src/css/base.css
@@ -35,3 +35,18 @@ main {
 main:has(.back-link) {
   text-align: center;
 }
+
+.is-hidden {
+  display: none;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0 20px;
+  margin: 0 auto;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
