--- a/src/css/teacher-extra.css
+++ b/src/css/teacher-extra.css
@@ -3,6 +3,47 @@
   transition: max-height 0.3s ease, opacity 0.3s ease;
 }
 
-.is-hidden {
-  display: none;
+.extra-experience {
+  line-height: 150%;
+  margin-bottom: 24px;
+}
+
+.teacher-reviews {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.review-item {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+
+.review-title {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
+
+.review-name {
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  color: #8a8a89;
+}
+
+.review-comment {
+  font-weight: 500;
+  line-height: 150%;
+}
+
+@media screen and (min-width: 1200px) {
+
+  .review-comment,
+  .extra-experience {
+    width: 900px;
+    /* display: none; */
+  }
 }
