--- a/src/partials/teachers-list.html
+++ b/src/partials/teachers-list.html
@@ -4,4 +4,5 @@
 
   </ul>
   <button class="load-more-btn" type="button">Load more</button>
+  <button class="scroll-top is-hidden" type="button">↑</button>
 </section>
