--- a/src/partials/teachers-list.html
+++ b/src/partials/teachers-list.html
@@ -4,5 +4,7 @@
 
   </ul>
   <button class="load-more-btn" type="button">Load more</button>
-  <button class="scroll-top is-hidden" type="button">↑</button>
+  <button class="scroll-top is-hidden" type="button"><svg width="32" height="32" class="svg-up">
+      <use href="/img/up.svg#icon-up"></use>
+    </svg></button>
 </section>
