--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -17,5 +17,5 @@
 @import url('./teachers-list.css');
 @import url('./teacher-extra.css');
 /* @import url('./back-link.css'); */
-@import url('./test-svg.css');
+@import url('./modal.css');
 @import url('./footer.css');
