--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -13,6 +13,7 @@
 
 .modal {
   position: relative;
+  width: 90vh;
   max-width: 90vw;
   max-height: 90vh;
   border-radius: 8px;
@@ -183,13 +184,17 @@ form:focus-within {
 .btn-form-lesson {
   border-radius: 12px;
   border: none;
-  padding: 10px;
+  padding: 8px;
   background-color: #f4c550;
   width: 100%;
   height: 40px;
   margin-top: 20px;
   margin-bottom: 40px;
-  /* margin: 0 auto; */
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 156%;
+  color: #121417;
 }
 
 @media screen and (min-width: 768px) {
@@ -204,5 +209,21 @@ form:focus-within {
     top: 20px;
     right: 20px;
     font-size: 40px;
+  }
+
+  .modal-title {
+    font-size: 40px;
+  }
+
+  .form-ask-title {
+    font-size: 24px;
+  }
+
+  input::placeholder {
+    font-size: 16px;
+  }
+
+  .btn-form-lesson {
+    height: 60px;
   }
 }
