login and register modal in progress

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -19,11 +19,11 @@
     </nav>
     <div class="auth">
       <ul class="auth-list">
-        <li><a class="logIn">
+        <li><button type="button" class="logIn">
             <svg width="20" height="20">
               <use href="/img/sprite.svg#icon-log-in"></use>
-            </svg>Log in</a></li>
-        <li><a class="register">Registration</a></li>
+            </svg>Log in</button></li>
+        <li><button type="button" class="register">Registration</button></li>
       </ul>
     </div>
   </div>
