--- a/src/css/header.css
+++ b/src/css/header.css
@@ -65,15 +65,18 @@
   font-size: 12px;
   line-height: 125%;
   color: #121417;
+  border: none;
+  background-color: inherit;
 }
 
 .register {
   border-radius: 8px;
-  padding: 6px 24px;
+  padding: 16px 24px;
   background-color: #121417;
   font-weight: 500;
   font-size: 12px;
   color: #fff;
+  border: none;
 }
 
 /* --------------------------------------------- */
@@ -111,9 +114,10 @@
 
   .register {
     border-radius: 12px;
-    padding: 14px 39px;
+    padding: 18px 39px;
     font-weight: 700;
     font-size: 16px;
+    height: 48px;
   }
 }
 
