--- a/src/css/test-svg.css
+++ b/src/css/test-svg.css
@@ -1,4 +1,4 @@
-.container-svg {
+/* .container-svg {
   display: flex;
   gap: 24px;
 }
@@ -22,4 +22,4 @@
 .normal {
   stroke: black;
   fill: white;
-}
+} */
