--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -18,12 +18,12 @@
 
     </nav>
     <div class="auth">
-      <ul class="auth-list">
-        <li><button type="button" class="logIn">
+      <ul class="auth-list ">
+        <!-- <li><button type="button" class="logIn">
             <svg width="20" height="20">
               <use href="/img/sprite.svg#icon-log-in"></use>
             </svg>Log in</button></li>
-        <li><button type="button" class="register">Registration</button></li>
+        <li><button type="button" class="register">Registration</button></li> -->
       </ul>
     </div>
   </div>
