show password is done

--- a/src/css/auth.css
+++ b/src/css/auth.css
@@ -18,7 +18,7 @@
   width: 100%;
 }
 
-.password {
+.password-toggle {
   border: none;
   background-color: inherit;
   position: absolute;
@@ -33,6 +33,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.password-toggle svg {
+  transition: transform 0.2s ease;
+}
+
+.password-toggle:active svg {
+  transform: scale(0.9);
 }
 
 /* in modal */
