--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -14,6 +14,10 @@
         <li class="nav-item">
           <a class="nav-link " href="./teachers.html">Teachers</a>
         </li>
+        <!-- <li class="nav-item is-hidden">
+          <a class="nav-link " href="./favorites.html">Favorites</a>
+        </li> -->
+
       </ul>
 
     </nav>
